feat: implement create user endpoints; fix a number of other things
